Fixed menu bar not showing close button

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -9,7 +9,6 @@
     text-align: center;
     animation-timing-function: linear;
     transition: all 750ms;
-    z-index: 100;
 }
 
 .Nobar {
